Fixed spacing

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,12 +5,8 @@ body {
 	font-family:"monospace";
 }
 
-table{
-	width:100%;
-	display:flex;
-	justify-content:center;
-}
- a{
+
+a{
 	text-decoration:none;
 	color:white;
 }
@@ -22,6 +18,12 @@ table{
 	font-size:100px;
 	animation-name:fuzz-fade;
 	animation-duration:6s;
+}
+
+.menu_table{
+	width:100%;
+	display:flex;
+	justify-content:center;
 }
 
 .home_title{
